# SolidPython

./: README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
Doc/: conf.py
solid/: extrude_along_path.py  objects.py  screw_thread.py  solidpython.py  splines.py  utils.py
solid/py_scadparser/: parsetab.py  scad_parser.py
solid/test/: ExpandedTestCase.py  test_extrude_along_path.py  test_screw_thread.py  test_solidpython.py  test_splines.py  test_utils.py
