[project]
name = "solidpython"
version = "1.1.5"
description = "Python interface to the OpenSCAD declarative geometry language"
authors = [{ name = "Evan Jones", email = "evan_t_jones@mac.com" }]
license = "LGPL-2.1"
keywords = [
    "3D",
    "CAD",
    "CSG",
    "constructive solid geometry",
    "geometry",
    "modeling",
    "OpenSCAD",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]


readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "euclid3>=0.1.0",
    "pypng>=0.0.19",
    "PrettyTable==0.7.2",
    "ply>=3.11",
]


[project.urls]
homepage = "https://github.com/SolidCode/SolidPython"
repository = "https://github.com/SolidCode/SolidPython"
documentation = "https://solidpython.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "tox>=4.30.3",
]

[tool.setuptools.packages.find]
include = ["solid*"]
exclude = ["Doc*"]
